[package]
name = "status_executor"
version = "0.1.0"
description = "Run your work on some context (thread) and get status info back"
authors = ["Malte Kießling <mkalte@mkalte.me>"]
edition = "2021"
rust-version = "1.63"
license = "MIT OR Apache-2.0"
repository = "https://github.com:mkalte666/status_executor"
keywords = ["parallel", "thread", "concurrency"]
categories = ["concurrency"]
exclude = ["/.idea/","/.gitlab/"]

[dependencies]
rayon = { version = "1.8", optional = true}

[[example]]
name="with_rayon"
path="examples/with_rayon.rs"
required-features=["rayon"]

[[example]]
name="with_rayon_global"
path="examples/with_rayon_global.rs"
required-features=["rayon"]
